# libtricubic

./: README.md
tricubic-1.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
tricubic-1.0/binaries/linux/lib/: libisInside.la
tricubic-1.0/binaries/win32/: WINBUILD.txt
tricubic-1.0/binaries/win32/tree/doc/: 1cube.eps  Makefile.am  Makefile.in  libtricubic_man.html  tric.dvi  tric.ps  tric.tex
tricubic-1.0/binaries/win32/tree/src/: example1.cpp  example3.cpp
tricubic-1.0/doc/: 2cubes.eps
tricubic-1.0/man/: Makefile.am  Makefile.in  libtricubic.3  ltricubic.3  ltricubic.h.3  tricubic.3  tricubic_eval.3  tricubic_get_coeff.3  tricubic_pointID2xyz.3
tricubic-1.0/src/: Makefile.am  Makefile.in  example2.cpp
tricubic-1.0/src/libtricubic/: Makefile.am  Makefile.in
