AC_INIT(src/example1.cpp)
AM_INIT_AUTOMAKE(tricubic,1.0)
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
#AC_PROG_RANLIB
##AC_PROG_LIBTOOL
AC_OUTPUT(src/libtricubic/Makefile src/Makefile Makefile man/Makefile doc/Makefile)
#AC_OUTPUT(Makefile src/Makefile src/libtricubic/Makefile)
